의존성 추가에 따른 App 변경 - recoil, react-router-dom 기본세팅 - index css 최상단으로 위치변경

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,20 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: Raleway;
+  src: url('./fonts/Raleway/Raleway-VariableFont_wght.ttf') format('truetype');
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+button {
+  border: none;
+  background: none;
+  padding: 0 0;
+  cursor: pointer;
+}
+
+:root::-webkit-scrollbar {
+  width: 0;
 }
