service, about 콘텐츠 생성 - 스크롤시 애니매이션 기능 추가 - service 애니메이션 기능 추가 - footer 이용약관 등 모달창 생성

--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,15 @@ button {
   cursor: pointer;
 }
 
+img {
+  -webkit-user-drag: none;
+}
+
+div,
+span {
+  user-select: none;
+}
+
 :root::-webkit-scrollbar {
-  width: 0;
+  display: none;
 }
