--- a/src/components/pages/Main/articles/About.css
+++ b/src/components/pages/Main/articles/About.css
@@ -1,78 +1,82 @@
 article.about {
-  position: absolute;
+  position: relative;
 
   left: 0;
-  top: 100vh;
+  /* top: 150vh; */
   width: 100%;
+  height: 1200px;
 
   box-sizing: border-box;
 }
 
-article.about section.about-1 {
+article.about section {
   position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 
-  top: 0;
+  /* top: 0; */
   width: 100%;
   height: 600px;
+
+  transition: transform 1s ease;
 }
 
-article.about section.about-1 .background {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-
-  background-image: url('../img/about-1.png');
-  background-position: 50% 50%;
-  background-size: cover;
-
-  z-index: 0;
-}
-
-article.about .about-1 span {
-  left: 50%;
-  top: 50%;
-
-  color: aliceblue;
-  font-size: 30px;
-  font-weight: bold;
-  line-height: 70px;
-
-  z-index: 1;
+article.about section.about-1 {
+  top: 0px;
 }
 
 article.about section.about-2 {
-  position: absolute;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-
-  top: 700px;
-  width: 100%;
-  height: 600px;
+  top: 600px;
 }
 
-article.about section.about-2 .background {
+article.about section.about-1.hide {
+  transform: translateX(100vw);
+}
+
+article.about section.about-2.hide {
+  transform: translateX(-100vw);
+}
+
+article.about section .background {
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
 
-  background-image: url('../img/about-2.png');
   background-position: 50% 50%;
   background-size: cover;
 
   z-index: 0;
 }
 
-article.about .about-2 span {
+article.about section.pop .background {
+  animation: blur-background 2s forwards;
+}
+
+@keyframes blur-background {
+  0% {
+    filter: none;
+  }
+  50% {
+    filter: none;
+  }
+  100% {
+    filter: blur(1px) brightness(0.8);
+  }
+}
+
+article.about section.about-1 .background {
+  background-image: url('../img/about-1.png');
+}
+
+article.about section.about-2 .background {
+  background-image: url('../img/about-2.png');
+}
+
+article.about section span {
   left: 50%;
   top: 50%;
 
@@ -81,5 +85,22 @@ article.about .about-2 span {
   font-weight: bold;
   line-height: 70px;
 
+  opacity: 0;
   z-index: 1;
+}
+
+article.about section.pop span {
+  animation: pop-ment 2s forwards;
+}
+
+@keyframes pop-ment {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 100;
+  }
 }
