--- a/src/components/pages/Main/articles/About.css
+++ b/src/components/pages/Main/articles/About.css
@@ -16,10 +16,10 @@ article.about section {
   justify-content: center;
   align-items: center;
 
-  /* top: 0; */
   width: 100%;
   height: 600px;
 
+  cursor: pointer;
   transition: transform 1s ease;
 }
 
@@ -31,12 +31,40 @@ article.about section.about-2 {
   top: 600px;
 }
 
+article.about section.pop::after {
+  position: absolute;
+
+  color: aliceblue;
+  font-size: 30px;
+  bottom: 30px;
+
+  z-index: 1;
+}
+
+article.about section.pop.about-1::after {
+  right: 30px;
+  content: 'CLICK & VIEW HISTORY ▶';
+}
+
+article.about section.pop.about-2::after {
+  left: 30px;
+  content: '◀ CLICK & VIEW ORGANIZATION';
+}
+
 article.about section.about-1.hide {
   transform: translateX(100vw);
 }
 
 article.about section.about-2.hide {
   transform: translateX(-100vw);
+}
+
+article.about section.about-1.pop.history {
+  transform: translateX(-100vw);
+}
+
+article.about section.about-2.pop.organization {
+  transform: translateX(100vw);
 }
 
 article.about section .background {
@@ -76,7 +104,7 @@ article.about section.about-2 .background {
   background-image: url('../img/about-2.png');
 }
 
-article.about section span {
+article.about section > span {
   left: 50%;
   top: 50%;
 
@@ -87,9 +115,10 @@ article.about section span {
 
   opacity: 0;
   z-index: 1;
+  transition: filter 0.3s linear;
 }
 
-article.about section.pop span {
+article.about section.pop > span {
   animation: pop-ment 2s forwards;
 }
 
@@ -103,4 +132,93 @@ article.about section.pop span {
   100% {
     opacity: 100;
   }
+}
+
+article.about section.about-1 > .history,
+article.about section.about-2 > .organization {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+
+  width: inherit;
+  height: inherit;
+
+  background: rgba(245, 245, 245, 0.6);
+}
+
+article.about section.about-1 > .history {
+  align-items: flex-start;
+  left: 100vw;
+}
+
+article.about section.about-2 > .organization {
+  align-items: center;
+  left: -100vw;
+}
+
+article.about section.about-1 > .history::after {
+  content: '◀ CLICK & BACK';
+  position: absolute;
+
+  left: 30px;
+  bottom: 30px;
+
+  color: darkblue;
+  font-size: 30px;
+
+  z-index: 1;
+}
+
+article.about section.about-2 > .organization::after {
+  content: 'CLICK & BACK ▶';
+  position: absolute;
+
+  right: 30px;
+  bottom: 30px;
+
+  color: darkblue;
+  font-size: 30px;
+
+  z-index: 1;
+}
+
+article.about section.about-1 > .history .title {
+  width: 100%;
+
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+
+  margin: 20px 0;
+}
+
+article.about section.about-2 > .organization .title {
+  width: 100%;
+
+  font-size: 30px;
+  font-weight: bold;
+  text-align: center;
+
+  margin: 20px 0;
+}
+
+article.about section.about-1 > .history .since {
+  font-size: 20px;
+  margin-left: 30vw;
+}
+
+article.about section.about-1 > .history .since strong {
+  margin-right: 20px;
+}
+
+article.about section.about-2 > .organization .content {
+  width: 60%;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+article.about section.about-2 > .organization img {
+  width: 45%;
+  height: 65%;
 }
