font 추가 및 글자 모양 수정 - 글 끊어지는 단위를 띄어쓰기 기준으로 하였음.

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,31 @@
   src: url('./fonts/Raleway/Raleway-VariableFont_wght.ttf') format('truetype');
 }
 
+@font-face {
+  font-family: 'EliceDigitalBaeum_Bold';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2105_2@1.0/EliceDigitalBaeum_Bold.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'NanumBarunpen';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_two@1.0/NanumBarunpen.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'GyeonggiTitleM';
+  src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_one@1.0/GyeonggiTitleM.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
+* {
+  word-break: keep-all;
+}
+
 a {
   text-decoration: none;
   color: black;
