--- a/src/components/pages/Main/articles/About.css
+++ b/src/components/pages/Main/articles/About.css
@@ -34,6 +34,7 @@ article.about section.pop::after {
   position: absolute;
 
   color: aliceblue;
+  font-family: NanumBarunpen;
   font-size: 30px;
   bottom: 30px;
 
@@ -108,6 +109,7 @@ article.about section > span {
   top: 50%;
 
   color: aliceblue;
+  font-family: EliceDigitalBaeum_Bold;
   font-size: 30px;
   font-weight: bold;
   line-height: 70px;
@@ -143,6 +145,8 @@ article.about section.about-2 > .organization {
   width: inherit;
   height: inherit;
 
+  font-family: GyeonggiTitleM;
+
   background: rgba(245, 245, 245, 0.6);
 }
 
@@ -164,6 +168,7 @@ article.about section.about-1 > .history::after {
   bottom: 30px;
 
   color: darkblue;
+  font-family: NanumBarunpen;
   font-size: 30px;
 
   z-index: 1;
@@ -177,6 +182,7 @@ article.about section.about-2 > .organization::after {
   bottom: 30px;
 
   color: darkblue;
+  font-family: NanumBarunpen;
   font-size: 30px;
 
   z-index: 1;
