--- a/src/components/pages/Main/articles/Contact.css
+++ b/src/components/pages/Main/articles/Contact.css
@@ -22,6 +22,7 @@ article.contact {
 
 article.contact .way-info {
   color: aliceblue;
+  font-family: GyeonggiTitleM;
   font-size: 18px;
   font-weight: bold;
   line-height: 40px;
