--- a/src/components/pages/Main/articles/Service.css
+++ b/src/components/pages/Main/articles/Service.css
@@ -47,6 +47,7 @@ article.service .ment span {
   position: relative;
 
   color: antiquewhite;
+  font-family: EliceDigitalBaeum_Bold;
   font-size: 25px;
   font-weight: bold;
   line-height: 50px;
@@ -67,6 +68,7 @@ article.service section {
 
   width: 100%;
 
+  font-family: EliceDigitalBaeum_Bold;
   background: rgba(0, 0, 0, 0.5);
   box-sizing: border-box;
 
